--- a/index1_dreaming.html
+++ b/index1_dreaming.html
@@ -89,14 +89,14 @@
         </div>
 
         <div class="row" align="center" >
-            <img src="images/photography/itsstillhere.jpg" alt="room" width="80%" style="margin-top: 5%">
+            <img src="images/photography/haikuRoom.jpg" alt="room" width="80%" style="margin-top: 5%">
         </div>
 
         <div class="row fade" align="center">
           <img src="images/naoko.jpg" alt="words" width="20%" style="margin-top: 5%">
          </div>
 
-        <div class="row" align="center" ><a href="spotify_url">
+        <div class="row" align="center" ><a href="https://www.facebook.com/LionsDenNL/">
             <img src="images/photography/naoko_left.png" alt="room" width="60%" style="margin-top: 2%"></a>
         </div>
 
