--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
-<body> can i do?
+<body>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
