--- a/index1_vibes.html
+++ b/index1_vibes.html
@@ -94,7 +94,15 @@
         </div>
 
         <div class="row" align="center" >
+            <img src="images/photography/highway.jpg" alt="room" width="80%" style="margin-top: 5%">
+        </div>
+
+        <div class="row" align="center" >
             <img src="images/photography/boston2.jpg" alt="room" width="80%" style="margin-top: 5%">
+        </div>
+
+        <div class="row" align="center" >
+            <img src="images/photography/birds.jpg" alt="room" width="80%" style="margin-top: 5%">
         </div>
 
         <div class="row" align="center" >
