--- a/index2.html
+++ b/index2.html
@@ -48,15 +48,29 @@
     </div>
 
     <!-- music ––––––––––––––––––––––––– -->
-    <div class="row fade" style="margin-top: 5%">
+    <div class="row" style="margin-top: 5%">
+      <div class="six columns" style="margin-bottom:10%">
+            <!-- add embeded track -->
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/219944637&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/237956908&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
+      </div>
+      <div class='six columns'>
+        <img src="images/mixtapes.jpg" alt="icon" width="100%">
+      </div>
+    </div>
+
+
+    <div class="row" style="margin-top: 5%">
       <div class="six columns" style="margin-bottom:10%">
             <!-- add embeded track -->
         <iframe width="80%"  height="350" align="center" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/123414059&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> </center>
       </div>
       <div class='six columns'>
-        <img src="images/selfhelp1.jpg" alt="icon" width="100%"'>
+        <img src="images/selfhelp1.jpg" alt="icon" width="100%">
       </div>
     </div>
+
+
 
     <div class='row' style="margin-left: 4%;margin-right: 4%">
     <div class="six columns" >
