added essays and poems

--- a/index3.html
+++ b/index3.html
@@ -68,87 +68,75 @@
     <!-- menu row  ––––––––––––––––––––––––– -->
 
     <!-- words ––––––––––––––––––––––––– -->
-
     <div class="container">
+
       <div class="row">
+        <center>
+          <b>Links to short essays I wrote on medium</b></br>
+          <p >
+            <a href="https://medium.com/@MarkTension/how-i-increased-my-productivity-by-depending-less-on-willpower-dfcb9dc84e83">
+              How I increased my productivity by depending less on willpower
+            </a> </br>
+            <a href="https://medium.com/@MarkTension/what-i-learned-about-learning-while-learning-japanese-18d2b05a7a9a">
+              What I learned about learning while learning Japanese
+            </a></br>
+
+          </p>
+        </center>
+
+      </div>
+
+      <center><img src="images/poetry.jpg" alt="poetry" width="30%" align="center" style="margin-bottom: 10%"> </br> </center>
+
+      <div class="row">
+
         <div class = 'four columns'>
           <img src="images/herfst.JPG" alt="herfst" width="100%" align="left" >
         </div>
         <div class="eight columns">
           <p text-align = 'center'>
-          <!-- <b>Warm and dry </b></br></br>
-          Warm and dry </br>
-Carpets muffle the crisp fire sounds.</br>
-A wet dog nose peaks through the door. </br> 
-It is shy. </br>
-With whistling leaves, water and wind, autumn whispers the dog inside.</br> 
-And as the room's warmth makes place for the obedient dog's presence, </br>
-it knows the battle is lost. </br> 
-While the rest of the room still naps. </br>
-The carpet is already accepting the soaked fur's first drippings,</br> 
-Only when finding herself in the middle of the room, </br>
-the true nature of its coming is unveiled. </br> 
-The Trojan dog's shaking has reached a point of no return. </br>
-The coals are left sissing and wet.</br>
-Autumn triumphs.</br> -->
-no words are better
-</p>
+            <b>Warm and dry </b></br></br>
+            Warm and dry </br>
+            Carpets muffle the crisp fire sounds.</br>
+            A wet dog nose peaks through the door. </br>
+            It is shy. </br>
+            With whistling leaves, water and wind, autumn whispers the dog inside.</br>
+            And as the room's warmth makes place for the obedient dog's presence, </br>
+            it knows the battle is lost. </br>
+            While the rest of the room still naps. </br>
+            The carpet is already accepting the soaked fur's first drippings,</br>
+            Only when finding herself in the middle of the room, </br>
+            the true nature of its coming is unveiled. </br>
+            The Trojan dog's shaking has reached a point of no return. </br>
+            The coals are left sissing and wet.</br>
+            Autumn triumphs.</br>
+          </p>
         </div>
       </div>
 
         <div class="row">
-        <div class="four columns">
-          <!-- <b>Within the ocean waves</b></br></br>
-          All the things inside this space</br>
-Will stay within the ocean waves</br></br>
-The pretty girl that smiled at me,</br> 
-From islands far away,</br> 
-Despite her beauty made me say</br>
-Nothing.</br> 
-She washed away.</br></br> 
-Islands never merge</br> 
-How lonely is their search,</br>
-For islands in the space</br> 
-Between the ocean waves -->
-        </div>
-        <div class="eight columns" >
+         <div class="eight columns" >
           <img src="images/ManSea.png" alt="manSea" width="100%" align="left" >
+         </div>
+        <div class="four columns">
+          <b>Within the ocean waves</b></br></br>
+          All the things inside this space</br>
+          Will stay within the ocean waves</br></br>
+          The pretty girl that smiled at me,</br>
+          From islands far away,</br>
+          Despite her beauty made me say</br>
+          Nothing.</br>
+          She washed away.</br></br>
+          Islands never merge</br>
+          How lonely is their search,</br>
+          For islands in the space</br>
+          Between the ocean waves
         </div>
+
     </div>
     <div class="row">
-      <div class="five columns" >
-          <img src="images/lonely.jpg" alt="lonely" width="100%" align="left" >
-        </div>
-        <div class="seven columns">
-          <!-- <b> Grin and bear</b></br></br>
-          A single tear, <br>
-you grin and bear<br>
-no need to be sincere<br><br>
 
-Your role in life,<br>
-is to survive,<br>
-Divide the butter with your knife.<br><br>
-
-the lonely wife is waiting<br>
-A smart man makes a painting<br>
-
-Divide the butter with your knife<br>
-How human are you still?<br>
-Divide the butter with your knife<br>
-What makes your life a thrill?<br>
-Divide the butter with your knife<br>
-so what are you debating?<br>
-to live and start creating?<br><br>
-
-a single life <br>
-a single knife..<br>
-a single wife?<br><br>
-
-One more tear <br>
-you grin and bear<br>
-no need to be disappear.<br> -->
-        </div>
-      </div>
+    </div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
