--- a/index1_dreaming.html
+++ b/index1_dreaming.html
@@ -100,6 +100,12 @@
             <img src="images/photography/naoko_left.png" alt="room" width="60%" style="margin-top: 2%"></a>
         </div>
 
+        <div class="row" align="center" ><a href="https://www.facebook.com/LionsDenNL/">
+            <img src="images/photography/red_and_blue_album.png" alt="room" width="56%" style="margin-top: 2%"></a>
+        </div>
+
+
+
          <!--<div class="row" align = "center" style="margin-bottom: 0%;margin-top: 0%">-->
                 <!--<img src="images/photography/0.png" alt="room" width="50%">-->
          <!--</div>-->
