added essays and poems

--- a/index1_dreaming.html
+++ b/index1_dreaming.html
@@ -104,6 +104,10 @@
             <img src="images/photography/red_and_blue_album.png" alt="room" width="56%" style="margin-top: 2%"></a>
         </div>
 
+        <div class="row" align="center" ><a href="https://www.facebook.com/LionsDenNL/">
+            <img src="images/photography/silver_grill_w_text.png" alt="grill" width="56%" style="margin-top: 2%"></a>
+        </div>
+
 
 
          <!--<div class="row" align = "center" style="margin-bottom: 0%;margin-top: 0%">-->
