--- a/index3.html
+++ b/index3.html
@@ -86,54 +86,54 @@
 
       </div>
 
-      <center><img src="images/poetry.jpg" alt="poetry" width="30%" align="center" style="margin-bottom: 10%"> </br> </center>
+      <!--<center><img src="images/poetry.jpg" alt="poetry" width="30%" align="center" style="margin-bottom: 10%"> </br> </center>-->
 
-      <div class="row">
+      <!--<div class="row">-->
 
-        <div class = 'four columns'>
-          <img src="images/herfst.JPG" alt="herfst" width="100%" align="left" >
-        </div>
-        <div class="eight columns">
-          <p text-align = 'center'>
-            <b>Warm and dry </b></br></br>
-            Warm and dry </br>
-            Carpets muffle the crisp fire sounds.</br>
-            A wet dog nose peaks through the door. </br>
-            It is shy. </br>
-            With whistling leaves, water and wind, autumn whispers the dog inside.</br>
-            And as the room's warmth makes place for the obedient dog's presence, </br>
-            it knows the battle is lost. </br>
-            While the rest of the room still naps. </br>
-            The carpet is already accepting the soaked fur's first drippings,</br>
-            Only when finding herself in the middle of the room, </br>
-            the true nature of its coming is unveiled. </br>
-            The Trojan dog's shaking has reached a point of no return. </br>
-            The coals are left sissing and wet.</br>
-            Autumn triumphs.</br>
-          </p>
-        </div>
-      </div>
+        <!--<div class = 'four columns'>-->
+          <!--<img src="images/herfst.JPG" alt="herfst" width="100%" align="left" >-->
+        <!--</div>-->
+        <!--<div class="eight columns">-->
+          <!--<p text-align = 'center'>-->
+            <!--<b>Warm and dry </b></br></br>-->
+            <!--Warm and dry </br>-->
+            <!--Carpets muffle the crisp fire sounds.</br>-->
+            <!--A wet dog nose peaks through the door. </br>-->
+            <!--It is shy. </br>-->
+            <!--With whistling leaves, water and wind, autumn whispers the dog inside.</br>-->
+            <!--And as the room's warmth makes place for the obedient dog's presence, </br>-->
+            <!--it knows the battle is lost. </br>-->
+            <!--While the rest of the room still naps. </br>-->
+            <!--The carpet is already accepting the soaked fur's first drippings,</br>-->
+            <!--Only when finding herself in the middle of the room, </br>-->
+            <!--the true nature of its coming is unveiled. </br>-->
+            <!--The Trojan dog's shaking has reached a point of no return. </br>-->
+            <!--The coals are left sissing and wet.</br>-->
+            <!--Autumn triumphs.</br>-->
+          <!--</p>-->
+        <!--</div>-->
+      <!--</div>-->
 
-        <div class="row">
-         <div class="eight columns" >
-          <img src="images/ManSea.png" alt="manSea" width="100%" align="left" >
-         </div>
-        <div class="four columns">
-          <b>Within the ocean waves</b></br></br>
-          All the things inside this space</br>
-          Will stay within the ocean waves</br></br>
-          The pretty girl that smiled at me,</br>
-          From islands far away,</br>
-          Despite her beauty made me say</br>
-          Nothing.</br>
-          She washed away.</br></br>
-          Islands never merge</br>
-          How lonely is their search,</br>
-          For islands in the space</br>
-          Between the ocean waves
-        </div>
+        <!--<div class="row">-->
+         <!--<div class="eight columns" >-->
+          <!--<img src="images/ManSea.png" alt="manSea" width="100%" align="left" >-->
+         <!--</div>-->
+        <!--<div class="four columns">-->
+          <!--<b>Within the ocean waves</b></br></br>-->
+          <!--All the things inside this space</br>-->
+          <!--Will stay within the ocean waves</br></br>-->
+          <!--The pretty girl that smiled at me,</br>-->
+          <!--From islands far away,</br>-->
+          <!--Despite her beauty made me say</br>-->
+          <!--Nothing.</br>-->
+          <!--She washed away.</br></br>-->
+          <!--Islands never merge</br>-->
+          <!--How lonely is their search,</br>-->
+          <!--For islands in the space</br>-->
+          <!--Between the ocean waves-->
+        <!--</div>-->
 
-    </div>
+    <!--</div>-->
     <div class="row">
 
     </div>
