added essays and poems

--- a/index1_near.html
+++ b/index1_near.html
@@ -85,33 +85,37 @@
 
         </div>
 
-        <div class="row" align="center">
-            <img src="images/photography/near2.jpg" alt="room" width="80%" style="margin-top: 5%">
-        </div>
+        <center><p>
+            no more spoilers
+        </p></center>
 
-        <div class="row" align="center" >
-            <img src="images/photography/near3.jpg" alt="room" width="80%" style="margin-top: 5%">
-        </div>
+        <!--<div class="row" align="center">-->
+            <!--<img src="images/photography/near2.jpg" alt="room" width="80%" style="margin-top: 5%">-->
+        <!--</div>-->
 
-        <div class="row " align="center">
-          <img src="images/photography/near4.jpg" alt="words" width="80%" style="margin-top: 5%">
-         </div>
+        <!--<div class="row" align="center" >-->
+            <!--<img src="images/photography/near3.jpg" alt="room" width="80%" style="margin-top: 5%">-->
+        <!--</div>-->
 
-        <div class="row " align="center">
-          <img src="images/photography/near9.jpg" alt="words" width="80%" style="margin-top: 5%">
-         </div>
+        <!--<div class="row " align="center">-->
+          <!--<img src="images/photography/near4.jpg" alt="words" width="80%" style="margin-top: 5%">-->
+         <!--</div>-->
 
-         <div class="row" align = "center" >
-                <img src="images/photography/near5.jpg" alt="sh" width="80%" style="margin-top: 5%">
-         </div>
+        <!--<div class="row " align="center">-->
+          <!--<img src="images/photography/near9.jpg" alt="words" width="80%" style="margin-top: 5%">-->
+         <!--</div>-->
 
-          <div class="row" align="center">
-              <img src="images/photography/near6.jpg" alt="dj" width="80%" style="margin-top: 5%">
-          </div>
+         <!--<div class="row" align = "center" >-->
+                <!--<img src="images/photography/near5.jpg" alt="sh" width="80%" style="margin-top: 5%">-->
+         <!--</div>-->
 
-        <div class="row" align="center">
-            <img src="images/photography/near7.jpg" alt="dk" width="80%" style="margin-top: 5%">
-        </div>
+          <!--<div class="row" align="center">-->
+              <!--<img src="images/photography/near6.jpg" alt="dj" width="80%" style="margin-top: 5%">-->
+          <!--</div>-->
+
+        <!--<div class="row" align="center">-->
+            <!--<img src="images/photography/near7.jpg" alt="dk" width="80%" style="margin-top: 5%">-->
+        <!--</div>-->
 
       </div>
 
