--- a/index1_vibes.html
+++ b/index1_vibes.html
@@ -93,9 +93,9 @@
             <img src="images/photography/boston3.jpg" alt="room" width="80%" style="margin-top: 5%">
         </div>
 
-        <div class="row" align="center" >
-            <img src="images/photography/highway.jpg" alt="room" width="80%" style="margin-top: 5%">
-        </div>
+        <!--<div class="row" align="center" >-->
+            <!--<img src="images/photography/highway.jpg" alt="room" width="80%" style="margin-top: 5%">-->
+        <!--</div>-->
 
         <div class="row" align="center" >
             <img src="images/photography/boston2.jpg" alt="room" width="80%" style="margin-top: 5%">
@@ -109,9 +109,9 @@
             <img src="images/photography/boston4.jpg" alt="room" width="80%" style="margin-top: 5%">
         </div>
 
-        <div class="row" align="center" >
-            <img src="images/photography/boston7.jpg" alt="room" width="80%" style="margin-top: 5%">
-        </div>
+        <!--<div class="row" align="center" >-->
+            <!--<img src="images/photography/boston7.jpg" alt="room" width="80%" style="margin-top: 5%">-->
+        <!--</div>-->
 
 
       </div>
