added essays and poems

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
       <div class="three columns "> 
         <!-- photo  ––––––––––––––––––––––––– -->
-       <a href= "index1_dreaming.html">
+       <a href= "index1_near.html">
        <img id="photography" src="images/photography0.jpg" alt="intro2 pic" width="50%" onmouseover="hoverTwo(this);" onmouseout="unhoverTwo(this);"> </a> 
       </div>
       <!--  music ––––––––––––––––––––––––– -->
