added essays and poems

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
 
   <!-- load script 
@@ -82,7 +82,14 @@
   </center></div>
 
     </center>
-  </div> 
+  </div>
+ <center>
+    <div class="row" style="margin-top: 5%">
+      <a href="https://www.instagram.com/sumakuschmark/" style="color:green"><h6>
+          Instagram: sumakuschmark
+    </h6></a>
+
+  </div></center
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
